Table users {
  id integer [primary key]
  username varchar
  password varchar
  role enum
  created_at timestamp
  updated_at timestamp
}

Table sellers {
  id integer [primary key]
  user_id integer [ref: > users.id]
  store_name varchar
  about varchar
  seller_status enum
  created_at timestamp
  updated_at timestamp
}

Table books {
  id integer [primary key]
  seller_id integer [ref: > sellers.id]
  title varchar
  author varchar
  country varchar
  language varchar
  link varchar
  pages integer
  year integer
  category_id integer [ref: > categories.id]
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id integer [primary key]
  name varchar
  description varchar
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id integer [primary key]
  user_id integer [ref: > users.id]
  subtotal decimal
  tax decimal
  total decimal
}

Table order_item {
  id integer [primary key]
  order_id integer [ref: > orders.id]
  book_id integer [ref: > books.id]
  quantity integer
  price decimal
  total decimal
}
